refactor method implementation of findAll() method